--- a/frontend/veganizza-app/src/index.css
+++ b/frontend/veganizza-app/src/index.css
@@ -285,7 +285,7 @@ button:active {
   max-width: 50%;
   font-size: 1rem;
   white-space: nowrap;
-  margin-right: 12px;
+  margin-right: 0.3rem;
 }
 .menu-item {
   display: flex;
@@ -385,7 +385,7 @@ button:active {
 }
 .recycle-container {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   flex-wrap: nowrap;
   align-items: center;
   flex-direction: row;
@@ -630,12 +630,12 @@ header img {
   background-color: #c72626;
   color: white;
   border-radius: 50px;
-  padding: 0.2rem 0.65rem 0.2rem 0.65rem;
+  padding: 0.3rem 0.6rem 0.3rem 0.6rem;
   pointer-events: none;
 }
 .header-icon-container {
   position: relative;
-  margin-right: 1rem;
+  margin-right: 1.5rem;
   height: 100%;
 }
 .hover-img {
@@ -907,7 +907,8 @@ header img {
   .btn-menu {
     white-space: normal;
     margin-right: 2px;
-    font-size: 4vw;
+    font-size: 2.2vw;
+    margin-right: 0.2rem;
   }
   .text-welcome h3 {
     font-size: 2rem;
